--- a/code/pom.xml
+++ b/code/pom.xml
@@ -6,11 +6,16 @@
 
   <groupId>org.example</groupId>
   <artifactId>code</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <parent>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>common</module>
+      <module>redis</module>
+    </modules>
+    <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.6.RELEASE</version>
+    <version>2.3.3.RELEASE</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
   <properties>
