--- a/code/pom.xml
+++ b/code/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>common</module>
       <module>redis</module>
+      <module>spring</module>
     </modules>
     <parent>
     <groupId>org.springframework.boot</groupId>
@@ -27,6 +28,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
     </dependency>
   </dependencies>
 
