--- a/code/spring/src/main/resources/mybatis/datasource.properties
+++ b/code/spring/src/main/resources/mybatis/datasource.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/spring?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+url=jdbc:mysql://112.124.23.142:3306/spring?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
 username=root
 password=root
